# song_ai

./: .gitignore  README.md  pyproject.toml
Victor_Synthetic_Super_Intelligence/: README.md  __init__.py  config_loader.py  exceptions.py  metrics.py
Victor_Synthetic_Super_Intelligence/agents/: __init__.py  task_executor.py  victor_agent.py
Victor_Synthetic_Super_Intelligence/configs/: model_config.yaml
Victor_Synthetic_Super_Intelligence/core/: __init__.py  cognition_engine.py  reasoning_loop.py  tensor_operations.py
Victor_Synthetic_Super_Intelligence/interfaces/: __init__.py  api_server.py  cli_interface.py
Victor_Synthetic_Super_Intelligence/memory/: __init__.py  episodic_memory.py  long_term_memory.py  vector_store.py
Victor_Synthetic_Super_Intelligence/training/: __init__.py  dataset_loader.py  training_pipeline.py
tests/: __init__.py  test_agents.py  test_api_server.py  test_cli_interface.py  test_cognition.py  test_infrastructure.py  test_memory.py  test_tensor_operations.py
